--- a/frontend/src/assets/styles/bootstrap.custom.css
+++ b/frontend/src/assets/styles/bootstrap.custom.css
@@ -204,9 +204,11 @@ body {
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
   background-color: var(--bs-body-bg);
+  text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
 
 hr {
   margin: 1.2rem 0;
@@ -450,7 +452,7 @@ caption {
 }
 
 th {
-  text-align: inherit;
+  text-align: match-parent;
   text-align: -webkit-match-parent;
 }
 
@@ -2401,8 +2403,8 @@ textarea.form-control-lg {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  -webkit-print-color-adjust: exact;
   print-color-adjust: exact;
+  -webkit-print-color-adjust: exact;
 }
 .form-check-input[type='checkbox'] {
   border-radius: 0.25em;
